dify/manifests/worker-beat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dify-worker-beat
  namespace: dify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dify-worker-beat
  template:
    metadata:
      labels:
        app: dify-worker-beat
    spec:
      containers:
      - name: worker-beat
        image: langgenius/dify-api:1.9.1
