dify/manifests/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dify-postgres
  namespace: dify
spec:
  selector:
    app: dify-postgres
  ports:
  - port: 5432
    targetPort: 5432
