dify/manifests/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dify-web
  namespace: dify
spec:
  selector:
    app: dify-web
  ports:
  - port: 80
    targetPort: 3000
